--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=5002
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=Abc123**
-DB_NAME=gestor_tareas
-DB_PORT=5432
-JWT_SECRET=bcbwuibeuiwkqnoi
+PORT=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_PORT=
+JWT_SECRET=
